added bubble backgroud

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ app.controller("myCtrl", function($scope) {
     } ;
 });
 </script>
-<body align:"center">
-<h1>Shopping List</h1>
+<body align:"center" >
+<h1 >Shopping List</h1>
 
 <div ng-app="myShoppingList" ng-controller="myCtrl">
     <ul>
@@ -44,6 +44,18 @@ app.controller("myCtrl", function($scope) {
     <input ng-model="addMe">
     <button ng-click="addItem()">Add</button>
     <p>{{errortext}}</p>
+</div>
+<div id="background-wrap">
+    <div class="bubble x1"></div>
+    <div class="bubble x2"></div>
+    <div class="bubble x3"></div>
+    <div class="bubble x4"></div>
+    <div class="bubble x5"></div>
+    <div class="bubble x6"></div>
+    <div class="bubble x7"></div>
+    <div class="bubble x8"></div>
+    <div class="bubble x9"></div>
+    <div class="bubble x10"></div>
 </div>
 </body>
 </html>
